syntax = "proto2";


package protos.approximators;

enum Output {
    VALUE = 0;
    MULTINOMIAL = 1;
    BINOMIAL = 2;
    GAUSSIAN = 3;

}

message DeepConvolutional {
    repeated ConvolutionalBlock block = 1;
    required uint32 num_actions = 2;
    required Output output = 3;

}

message DeepDense {
    repeated DenseBlock block = 1;
    required uint32 num_actions = 2;
    required Output output = 3;
}

enum Activation {
    NONE = 0;
    RELU = 1;
    SIGMOID = 2;
    ELU = 3;
}

message ConvolutionalBlock {
    optional Activation activation = 1 [default = NONE ];

    required uint32 num_filters = 2;

    optional uint32 stride = 3 [default = 1];
}

message DenseBlock {
    optional Activation activation = 1 [default = NONE];
    required uint32 num_units = 2;



}
